add endpoints to get the names of the publisher and authors
