# src/main/java/com/example/simplelibrary/domains/book/dto/BookMapper.java
@@ -1,9 +1,11 @@
 package com.example.simplelibrary.domains.book.dto;
 
 import com.example.simplelibrary.domains.author.Author;
+import com.example.simplelibrary.domains.author.dto.AuthorNameDto;
 import com.example.simplelibrary.domains.book.Book;
-import com.example.simplelibrary.interfaces.Mapper;
 import com.example.simplelibrary.domains.publisher.Publisher;
+import com.example.simplelibrary.domains.publisher.dto.PublisherNameDto;
+import com.example.simplelibrary.interfaces.Mapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -22,8 +24,16 @@ public class BookMapper implements Mapper<Book, BookRequestDto, BookResponseDto>
                 .genre(book.getGenre())
                 .publicationYear(book.getPublicationYear())
                 .quantity(book.getQuantity())
-                .authorId(book.getAuthor().getId())
-                .publisherId(book.getPublisher().getId())
+                .author(AuthorNameDto.builder()
+                        .id(book.getAuthor().getId())
+                        .name(book.getAuthor().getName())
+                        .build()
+                )
+                .publisher(PublisherNameDto.builder()
+                        .id(book.getPublisher().getId())
+                        .name(book.getPublisher().getName())
+                        .build()
+                )
                 .build();
     }
 
