# src/main/java/com/example/simplelibrary/domains/book/dto/GenreDto.java
@@ -1,0 +1,14 @@
+package com.example.simplelibrary.domains.book.dto;
+
+import com.example.simplelibrary.domains.book.Genre;
+import lombok.*;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class GenreDto {
+    private Genre genre;
+    private String name;
+}
