# src/main/java/com/example/simplelibrary/domains/publisher/dto/PublisherNameDto.java
@@ -1,0 +1,15 @@
+package com.example.simplelibrary.domains.publisher.dto;
+
+import lombok.*;
+
+import java.util.UUID;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+public class PublisherNameDto {
+    private UUID id;
+    private String name;
+}
